<resources>
    <string name="app_name">RGBStreamer</string>
    <string name="titleString">FHTW LED Matrix\nRGB Streamer</string>
    <string name="connectString">Connect</string>
    <string name="streamString">Stream Picture</string>
    <string name="drawString">Draw</string>
    <string name="snakeString">Snake</string>
    <string name="configstring">Configuration</string>
    <string name="noPanelRowsString">Number of panel rows</string>
    <string name="noPanelRowsDefault">1</string>
    <string name="noPanelColString">Number of panel columns</string>
    <string name="noPanelColDefault">1</string>
    <string name="noPixelRowsString">Number of pixel rows per panel</string>
    <string name="noPixelRowsDefault">32</string>
    <string name="noPixelColString">Number of pixel columns per panel</string>
    <string name="noPixelColDefault">32</string>
    <string name="colorDepthString">Color depth per color [bits]</string>
    <string name="colorDepthDefault">8</string>
    <string name="btReceiverNameString">Name of BT receiver module</string>
    <string name="btReceiverNameDefault">RN42-5489</string>
    <string name="rgbStreamingProtocolSizeString">Streaming RGB packet size (5 or 6 bytes)</string>
    <string name="rgbDrawingProtocolSizeString">Drawing RGB packet size (5 or 6 bytes)</string>
    <string name="rgbStreamingProtocolSizeDefault">5</string>
    <string name="rgbDrawingProtocolSizeDefault">6</string>
    <string name="ackEnabledStreamingString">ACK enabled</string>
    <string name="ackEnabledDrawingString">ACK enabled</string>
    <string name="useFPGAString">Use FPGA as LED Panel Driver</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_draw_picture">DrawPicture</string>
    <string name="playButtonString">Play</string>
    <string name="drawPicture_backButtonString">Back</string>

    <string name="hello_world">Hello world!</string>
</resources>
