<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".RGBStreamer"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        android:fadeScrollbars="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/fragment_container">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/titleImage"
                    android:src="@drawable/ic_launcher" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/titleString"
                    android:id="@+id/titleText"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/connectString"
                    android:id="@+id/connectButton"
                    android:onClick="connectButtonClicked"
                    android:layout_weight="1" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/drawString"
                    android:id="@+id/drawButton"
                    android:onClick="drawButtonClicked"
                    android:layout_weight="1" />

            </LinearLayout>

            <TextView android:text="@string/configstring" android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/configText"
                style="?android:listSeparatorTextViewStyle" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/noPanelRows"
                    android:text="@string/noPanelRowsDefault"
                    android:gravity="center"
                    android:inputType="number"
                    android:ems="10" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/noPanelRowsString"
                    android:id="@+id/noPanelRowsText" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/noPanelCol"
                    android:text="@string/noPanelColDefault"
                    android:gravity="center"
                    android:inputType="number"
                    android:ems="10" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/noPanelColString"
                    android:id="@+id/noPanelColText"
                    android:layout_weight="0.2" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/noPixelRows"
                    android:text="@string/noPixelRowsDefault"
                    android:gravity="center"
                    android:inputType="number"
                    android:ems="10"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/noPixelRowsString"
                    android:id="@+id/noPixelRowsText"
                    android:layout_weight="0.2" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/noPixelCol"
                    android:text="@string/noPixelColDefault"
                    android:gravity="center"
                    android:inputType="number"
                    android:ems="10"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/noPixelColString"
                    android:id="@+id/noPixelColText"
                    android:layout_weight="0.2" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/colorDepth"
                    android:text="@string/colorDepthDefault"
                    android:gravity="center"
                    android:inputType="number"
                    android:ems="10"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/colorDepthString"
                    android:id="@+id/colorDepthText"
                    android:layout_weight="0.2" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btReceiverName"
                    android:text="@string/btReceiverNameDefault"
                    android:gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btReceiverNameString"
                    android:id="@+id/btReceiverNameText"
                    android:layout_weight="0.2" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/rgbStreamingProtocolSize"
                    android:text="@string/rgbStreamingProtocolSizeDefault"
                    android:gravity="center"
                    android:inputType="number"
                    android:ems="10" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rgbStreamingProtocolSizeString"
                    android:id="@+id/rgbStreamingProtocolSizeText"
                    android:layout_weight="0.2" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ackEnabledStreamingCheckBox" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ackEnabledStreamingString"
                    android:id="@+id/ackEnabledStreamingText"
                    android:layout_weight="0.2" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/rgbDrawingProtocolSize"
                    android:text="@string/rgbDrawingProtocolSizeDefault"
                    android:gravity="center"
                    android:inputType="number"
                    android:ems="10" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rgbDrawingProtocolSizeString"
                    android:id="@+id/rgbDrawingProtocolSizeText"
                    android:layout_weight="0.2" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ackEnabledDrawingCheckBox" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ackEnabledDrawingString"
                    android:id="@+id/ackEnabledDrawingText"
                    android:layout_weight="0.2" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
